compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__package_documentation_is_included.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\n//// Some package\n//// documentation!\n\npub fn main() { 1 }\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [
        " Some package",
        " documentation!"
      ],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-go-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-go": true
          },
          "parameters": [],
          "return": {
            "kind": "named",
            "name": "Int",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        }
      }
    }
  }
}
